plugin/tests/snapshots/render_snapshots__render_browse_with_wrapped_status_message.snap
---
source: tests/render_snapshots.rs
expression: output
---
[?1049h[H[2J[1m[36m zelligent ───────────────────[0m

[36m▌[0m [1m[36mfeat-a                    [0m  
[36m▌[0m [2mbranch: feat-a            [0m
  feat-b                      
  [2mbranch: feat-b            [0m
  feat-c                      
  [2mbranch: feat-c            [0m






[31m  Only worktree tabs can be[0m
[31m  removed[0m

  [2m↑/k[0m up  [2m↓/j[0m down  [2mEnter[0m open
  [2mn[0m branch  [2mi[0m new  [2md[0m del  [2mr[0m ↻
  [2mVERSION           [0m
