plugin/tests/snapshots/render_snapshots__render_browse_without_tabs_uses_worktree_fallback.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[1m[36m myrepo ────────────────────────────────────────────────────────────────────────[0m

    [0m autonomy                                                                   
    [2m branch: plugin-snapshot-tests                                                [0m
    [0m[7m competition                                                                [0m
    [2m[7m branch: competition                                                          [0m

  [2m↑/k[0m up  [2m↓/j[0m down  [2mEnter[0m open  [2mn[0m branch  [2mi[0m new  [2md[0m remove  [2mr[0m refresh
  [2mVERSION                                                             [0m
