plugin/tests/snapshots/render_snapshots__render_input_branch_empty.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&s, 20, 80)"
---
[?1049h[H[2J[1m[36m zelligent ─────────────────────────────────────────────────────────────────────[0m

  [1mNew branch name:[0m

  > [7m [0m













  [2mEnter[0m create  [2mEsc[0m back
  [2mVERSION                                                             [0m
